--- a/app/views/agendamentos/edit.html.erb
+++ b/app/views/agendamentos/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing Agendamento</h1>
-
+<div class="card">
+<div class="card-header"><h1>Editar Agendamento</h1></div>
+<div class="card-body">
 <%= render 'form', agendamento: @agendamento %>
-
+</div>
+<div class="card-footer">
 <%= link_to 'Show', @agendamento %> |
 <%= link_to 'Back', agendamentos_path %>
+</div>
