--- a/app/views/chamadas/index.html.erb
+++ b/app/views/chamadas/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Chamadas</h1>
 
 <table>
@@ -20,7 +18,7 @@
         <td><%= chamada.falta_justificada %></td>
         <td><%= link_to 'Show', chamada %></td>
         <td><%= link_to 'Edit', edit_chamada_path(chamada) %></td>
-        <td><%= link_to 'Destroy', chamada, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', chamada, method: :delete, data: { confirm: 'Tem certeza sobre a exclusão da chamada?' } %></td>
       </tr>
     <% end %>
   </tbody>
