--- a/app/views/contratos/edit.html.erb
+++ b/app/views/contratos/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Contrato</h1>
-
-<%= render 'form', contrato: @contrato %>
-
-<%= link_to 'Show', @contrato %> |
-<%= link_to 'Back', contratos_path %>
+<div class="card">
+  <div class="card-header"><h1>Editar Contrato</h1></div>
+  <div class="card-body">
+  <%= render 'form', contrato: @contrato %>
+  </div>
+  <div class="card-footer">
+    <%= link_to 'Show', @contrato %> |
+    <%= link_to 'Back', contratos_path %>
+  </div>
+</div>
