--- a/app/views/contratos/edit.html.erb
+++ b/app/views/contratos/edit.html.erb
@@ -4,7 +4,7 @@
   <%= render 'form', contrato: @contrato %>
   </div>
   <div class="card-footer">
-    <%= link_to 'Show', @contrato %> |
-    <%= link_to 'Back', contratos_path %>
+    <%= link_to 'Ver detalhes', @contrato %> |
+    <%= link_to 'Voltar', contratos_path %>
   </div>
 </div>
