--- a/app/views/contratos/new.html.erb
+++ b/app/views/contratos/new.html.erb
@@ -4,6 +4,6 @@
   <%= render 'form', contrato: @contrato %>
   </div>
   <div class="card-footer">
-    <%= link_to 'Back', contratos_path %>
+    <%= link_to 'Voltar', contratos_path %>
   </div>
 </div>
