--- a/app/views/contratos/show.html.erb
+++ b/app/views/contratos/show.html.erb
@@ -28,5 +28,5 @@
   <%= @contrato.regular %>
 </p>
 
-<%= link_to 'Edit', edit_contrato_path(@contrato) %> |
-<%= link_to 'Back', contratos_path %>
+<%= link_to 'Editar', edit_contrato_path(@contrato) %> |
+<%= link_to 'Voltar', contratos_path %>
