--- a/app/views/agendamentos/edit.html.erb
+++ b/app/views/agendamentos/edit.html.erb
@@ -4,6 +4,6 @@
 <%= render 'form', agendamento: @agendamento %>
 </div>
 <div class="card-footer">
-<%= link_to 'Show', @agendamento %> |
-<%= link_to 'Back', agendamentos_path %>
+<%= link_to 'Ver detalhes', @agendamento %> |
+<%= link_to 'Voltar', agendamentos_path %>
 </div>
