--- a/app/views/agendamentos/show.html.erb
+++ b/app/views/agendamentos/show.html.erb
@@ -13,5 +13,5 @@
   <%= @agendamento.tipo_curso_id %>
 </p>
 
-<%= link_to 'Edit', edit_agendamento_path(@agendamento) %> |
-<%= link_to 'Back', agendamentos_path %>
+<%= link_to 'Editar', edit_agendamento_path(@agendamento) %> |
+<%= link_to 'Voltar', agendamentos_path %>
