--- a/app/views/agendamentos/index.html.erb
+++ b/app/views/agendamentos/index.html.erb
@@ -1,15 +1,16 @@
 <div class="card">
 <div class="card-header"><h1>Agendamentos</h1></div>
 <div class="card-body">
+<div class="table-responsive">
 <table class="table table-bordered table-condensed table-hover">
   <thead>
     <tr>
-      <th>Aluno</th>
-      <th>Data hora</th>
-      <th>Duração</th>
-      <th>Tipo de Curso</th>
-      <th>Sala</th>
-      <th colspan="3">Operações</th>
+      <th scope="col">Aluno</th>
+      <th scope="col">Data hora</th>
+      <th scope="col">Duração</th>
+      <th scope="col">Tipo de Curso</th>
+      <th scope="col">Sala</th>
+      <th scope="col" colspan="3">Operações</th>
     </tr>
   </thead>
 
@@ -28,6 +29,7 @@
     <% end %>
   </tbody>
 </table>
+</div>
 </div>
 <div class="card-footer"><%= link_to 'Novo Agendamento', new_agendamento_path, class: "btn btn-primary" %></div>
 </div>
