--- a/app/views/layouts/components/_navbar.html.erb
+++ b/app/views/layouts/components/_navbar.html.erb
@@ -8,20 +8,32 @@
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/"><i class='fa fa-calendar'></i> Calendário <span class="sr-only">(current)</span></a>
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link" href="/agendamentos">Meus Agendamentos</a>
-      </li>
+      <% unless current_usuario.nil? %>
+        <% if current_usuario.has_role? :admin %>
+          <li class="nav-item">
+            <a class="nav-link" href="/agendamentos">Agendamentos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/chamadas">Chamadas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contratos">Contratos</a>
+          </li>
+        <% elsif current_usuario.has_role? :aluno %>
 
-      <li class="nav-item">
-        <a class="nav-link" href="/chamadas">Chamadas</a>
-      </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/meus_agendamentos">Meus Agendamentos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contratos">Contratos</a>
+          </li>
+        <% end %>
 
-      <li class="nav-item">
-        <a class="nav-link" href="/contratos">Contratos</a>
-      </li>
+
+      <% end %>
 
       <div id="nav-item">
           <% if usuario_signed_in? %>
@@ -30,6 +42,8 @@
               <%= link_to 'Acessar', new_usuario_session_path, class: 'nav-link' %>
           <% end %>
       </div>
+
+
     </ul>
 
   </div>
