--- a/app/views/tipo_cursos/_form.html.erb
+++ b/app/views/tipo_cursos/_form.html.erb
@@ -16,6 +16,11 @@
     <%= form.text_field :nome %>
   </div>
 
+  <div class="field">
+    <%= form.label :cor %>
+    <%= form.text_field :cor %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
